Fix layout issue, modify required CSS rules

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 64px;
     width: 1280px;
     height: 100vh;
     margin: 0 auto;
