--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,13 +1,14 @@
 .work-container {
     width: 100%;
+    height: fit-content;
     display: flex;
     gap: 32px;
-    padding: 16px;
+    padding: 64px 16px;
     /* border: 1px solid white; */
 }
 
 .work-item {
-    width: 50%;
+    width: 48.5%;
     display: flex;
     flex-direction: column;
     gap: 32px;
